feat: Se realiza la creacion del endpoint para la consulta por documento y se refactoriza la funcion GetPayload udistrital/sisifo_documentacion#77
