# swagger/swagger.yml
@@ -53,6 +53,26 @@ paths:
             $ref: '#/definitions/models.ResponseDTO'
         "404":
           description: not found resource
+  /token/documentoToken:
+    post:
+      tags:
+      - token
+      description: Recibe el documento y devuelve información detallada del usuario
+      operationId: TokenController.GetDocumento
+      parameters:
+      - in: body
+        name: body
+        description: Documento del usuario
+        required: true
+        schema:
+          $ref: '#/definitions/models.Documento'
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Payload'
+        "404":
+          description: not found resource
   /token/emailToken:
     post:
       tags:
@@ -94,9 +114,15 @@ paths:
         "404":
           description: not found resource
 definitions:
-  119.0xc00045f380.false:
+  113.0x14000286d20.false:
     title: "false"
     type: object
+  models.Documento:
+    title: Documento
+    type: object
+    properties:
+      numero:
+        type: string
   models.Payload:
     title: Payload
     type: object
@@ -122,7 +148,7 @@ definitions:
     type: object
     properties:
       data:
-        $ref: '#/definitions/119.0xc00045f380.false'
+        $ref: '#/definitions/113.0x14000286d20.false'
       message:
         type: string
       status:
